--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 1 Nov 2000</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> 09955626546</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Delhi, India</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Delhi, India</li>
                 </ul>
               </div>
               <div class="col-lg-6">
