--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Lilanjan Barman</a></h1>
+        <h1 class="text-light"><a href="index.html">Roy Brothers</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -68,7 +68,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Lilanjan Barman</h1>
+      <h1>Roy Brothers</h1>
       <p>I'm <span class="typed" data-typed-items="Developer, Freelancer"></span></p>
     </div>
   </section><!-- End Hero -->
@@ -81,7 +81,7 @@
 
         <div class="section-title">
           <h2>About Me</h2>
-          <p>Lilanjan Barman loves programming,learning new ideas and tech.</p>
+          <p>Roy Brothers loves programming,learning new ideas and tech.</p>
         </div>
 
         <div class="row">
@@ -311,7 +311,7 @@
   <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Lilanjan Barman 2020</span></strong>
+        &copy; Copyright <strong><span>Roy Brothers 2020</span></strong>
       </div>
       <div class="credits">
       </div>
